Updated the github workflows

--- a/.github/workflows/automatic-prerelease.yml
+++ b/.github/workflows/automatic-prerelease.yml
@@ -12,10 +12,16 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      # ...
-      - name: "Build & test"
-        run: |
-          echo "done!"
+      - uses: actions/checkout@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+
+      - name: Build
+        run: go build -v ./...
+
+      - name: Test
+        run: go test -v ./...
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -23,6 +29,3 @@ jobs:
           automatic_release_tag: "latest"
           prerelease: true
           title: "Development Build"
-          files: |
-            LICENSE.txt
-            *.jar
