--- a/.github/workflows/automatic-prerelease.yml
+++ b/.github/workflows/automatic-prerelease.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           go-version: "1.21"
 
+      - name: Set up fyne dependencies
+        run: sudo apt install libxcursor-dev libxinerama-dev libxrandr-dev libxi-dev libgl-dev libxxf86vm-dev
+
       - name: Build
         run: go build -v ./...
 
