testing something with the github action

--- a/.github/workflows/automatic-prerelease.yml
+++ b/.github/workflows/automatic-prerelease.yml
@@ -34,3 +34,4 @@ jobs:
           automatic_release_tag: "latest"
           prerelease: true
           title: "Development Build"
+          files: maze-solver
