--- a/.github/workflows/automatic-prerelease.yml
+++ b/.github/workflows/automatic-prerelease.yml
@@ -34,4 +34,5 @@ jobs:
           automatic_release_tag: "latest"
           prerelease: true
           title: "Development Build"
-          files: maze-solver
+          files: |
+            maze-solver
